--- a/SendMe/Views/Shared/_LoginPartial.cshtml
+++ b/SendMe/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
         <ul class="nav navbar-nav navbar-right">
 
             <li>
-                @Html.ActionLink("Manage Account", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                @Html.ActionLink("Manage Profile", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
 
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
