--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SendMe.Models.StudentViewModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = Model.Student.FirstName + Model.Student.LastName;
     ViewBag.currentUser = User.Identity.Name;
     ViewBag.userProfile = Model.User.UserName;
 }
@@ -37,6 +37,17 @@
                             </blockquote>
                         </div>
                     }
+                    <hr />
+                    <div class="stuProfShare">
+                        <ul class="social-icons">
+                            <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+                            <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+                            <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+                        </ul>
+                        <strong>Help @Model.Student.FirstName get the word out!</strong>
+                        <br />
+                        <a href="#">sendme.com/send/@Model.User.UserName</a>
+                    </div>
                 </div>
             </div>
 
@@ -164,7 +175,7 @@
                                                                     <div class="col-sm-10">
                                                                         <div class="progress">
                                                                             <div id="progress-bar" class="progress-bar" role="progressbar"
-                                                                                 aria-valuemin="0" aria-valuemax="100"">
+                                                                                 aria-valuemin="0" aria-valuemax="100" ">
                                                                             </div>
                                                                         </div>
                                                                         <h3>
@@ -200,7 +211,7 @@
                                                                                             </svg>
                                                                                         </i>
                                                                                     </a>
-                                                                                </div>                                                                                
+                                                                                </div>
                                                                             }
                                                                             else
                                                                             {
@@ -285,16 +296,16 @@
                             </script>
                         </div>
                     }
-                    <!-----------View Donations Partial------------->                       
-                            <div id="viewDonationsToggle">
-                                @Html.Partial("_ViewDonationsPartial")
-                        </div>
+                    <!-----------View Donations Partial------------->
+                    <div id="viewDonationsToggle">
+                        @Html.Partial("_ViewDonationsPartial")
                     </div>
                 </div>
-
             </div>
+
         </div>
     </div>
+</div>
 <!-----------Successful Payment Message------------->
 <div id="paymentSuccessToggle">
     @Html.Partial("_PaymentSuccessPartial")
