--- a/SendMe/Views/Shared/_PaymentPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentPartial.cshtml
@@ -4,7 +4,7 @@
 </p>
 <hr />
 <div class="container">
-    <form name="DonationForm">
+    <form name="DonationForm" id="donationPartialForm">
         <h4>Required</h4>
         <div class="group">
             <label>
