--- a/SendMe/Content/Site.css
+++ b/SendMe/Content/Site.css
@@ -204,7 +204,7 @@ h1 {
 }
 
 *:focus {
-    outline: none;
+    outline: none!important;
 }
 
 #contact_success_message {
@@ -552,6 +552,26 @@ ul.social-icons {
 .sm-prof-card {
     min-height: 495px;
 }
+
+.donateSch {
+    border-radius: 50%;
+    padding: 12px 2px;
+    height: 50px;
+    width: 50px;
+    background-color: #1ABBAC;
+    border-radius: 50%;
+    position: absolute;
+    top: 30%;
+    left: 60%;
+    color: #fff;
+}
+
+#schDonateToggle .school-card {
+    background-color: #fff;    
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    border-radius: 5px;
+}
+
 
 /*---------------------------------------
 
