--- a/SendMe/Views/Home/About.cshtml
+++ b/SendMe/Views/Home/About.cshtml
@@ -14,13 +14,14 @@
      destinations.push('@destination.Destination');
     </text>
 }
-    </script>
+</script>
 
-<div class="container">
-    <div id="mapAll" style="width: 500px; height: 400px; border: 3px solid #DADEE0;"></div><br />
-</div>
 
 <div class="about-content">
+
+    <div class="container">
+        <div id="mapAll" style="width: 83%; height: 300px; border: 3px solid #DADEE0"></div><br />
+    </div>
 
     <h2><strong>The Motivation</strong></h2>
     <hr />
