--- a/SendMe/Views/Shared/_Layout.cshtml
+++ b/SendMe/Views/Shared/_Layout.cshtml
@@ -26,8 +26,9 @@
                 <img class="logo-nav" src="~/Img/SendMeLogoTxt.png" />
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-default">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li><a href="~/school/1">Find Your School</a></li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
