--- a/SendMe/Content/Site.css
+++ b/SendMe/Content/Site.css
@@ -275,7 +275,7 @@ select {
 
 -----------------------------*/
 .about-content {
-    margin: 5%;
+    margin: 2% 5% 5% 5%;
     background-color: #fff;
     color: #020202;
     padding: 5%;
@@ -292,6 +292,7 @@ select {
     .about-content li {
         padding-bottom: 5px;
     }
+
 
 .about-title {
     max-height: 200px;
@@ -723,6 +724,7 @@ ul.social-icons {
         .navbar-default .navbar-brand:hover,
         .navbar-default .navbar-brand:focus {
             color: #ffffff;
+            background-color: #2c9288;
         }
 
     .navbar-default .navbar-text {
@@ -736,6 +738,7 @@ ul.social-icons {
         .navbar-default .navbar-nav > li > a:hover,
         .navbar-default .navbar-nav > li > a:focus {
             color: #ffffff;
+            background-color: #2c9288;
         }
 
     .navbar-default .navbar-nav > .active > a,
