--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -153,7 +153,8 @@
                                                                     <sup>
                                                                         @Model.ActiveTrip.Trip.Dates
                                                                     </sup>
-                                                                    <div data-toggle="tooltip" data-placement="left" data-original-title="Read More" style="float:right">
+                                                                    <div style="float:right">
+                                                                        <sup>More About This Trip</sup>
                                                                         <span class="glyphicon glyphicon-chevron-down"
                                                                               data-toggle="collapse" data-target="#tripDescription">
                                                                         </span>
