--- a/SendMe/Views/School/Index.cshtml
+++ b/SendMe/Views/School/Index.cshtml
@@ -39,7 +39,7 @@
                                     <!--Donate Button-->
                                     <button class="btn btn-fab donateSch" data-toggle="tooltip"
                                             data-placement="top" data-original-title="Donate" title="" id="schDonate"
-                                             data-id="@(student.ActiveTrip.Trip.Id)" data-username="@(student.User.UserName)">
+                                            data-id="@(student.ActiveTrip.Trip.Id)" data-username="@(student.User.UserName)">
                                         <i class="material-icons">
                                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                                 <path fill="#FFF" d="M11,4.5H13V15.5H11V4.5M13,17.5V19.5H11V17.5H13Z" />
@@ -67,29 +67,35 @@
                                     </h4>
                                     <sup>@student.ActiveTrip.Trip.Dates</sup>
                                     <p style="text-align: right">@student.ActiveTrip.Trip.PercentOfAmnt% Raised</p>
+
+                                    if (User.IsInRole("Admin") && ViewBag.UserSchId == Model.School.Id)
+                                    {
+                                        <div class="schViewDonsToggle" style="float:right">
+                                            <sup>View Donations</sup>
+                                            <span class="glyphicon glyphicon-chevron-right"
+                                                  data-toggle="collapse" data-target="@("#schViewDons" + student.Student.Id)">
+                                            </span>
+                                        </div>
+                                    }
                                 }
                                 else
                                 {
                                     <h4>@student.Student.FirstName does not have any active trips.</h4>
                                 }
-                                <div data-toggle="tooltip" data-placement="top" data-original-title="Share Link" style="float:right">
-                                    <span class="glyphicon glyphicon-chevron-down"
-                                          data-toggle="collapse" data-target="@("#sendmeUrl" + student.Student.Id)">
-                                    </span>
-                                </div>
-                                <p id="@("sendmeUrl" + student.Student.Id)" class="collapse">
-                                    <strong>@student.Student.FirstName's SendMe! URL:</strong>
-                                    sendme.com/send/@student.User.UserName
-                                </p>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div id="@("schViewDons" + student.Student.Id)" class="collapse">
+                    <div class="col-sm-12 col-md-6">
+                        @{ Html.RenderPartial("_ViewDonationsPartial", student); }
                     </div>
                 </div>
             }
         </div>
     </div>
 </div>
-
 
 <div id="schDonateToggle" class="school-card col-sm-12 col-lg-4 col-lg-offset-3">
     <div class="card">
