--- a/SendMe/Views/Home/About.cshtml
+++ b/SendMe/Views/Home/About.cshtml
@@ -17,12 +17,17 @@
 </script>
 
 <!--Map-->
+@{double total = 0.0;}
+@foreach (var amount in ViewBag.TotalDonations)
+{
+    total +=amount.Amount;
+}
 <div class="row">
     <div class="about-content">
-
         <div class="container">
             <div id="mapAll" style="width: 83%; height: 300px; border: 3px solid #DADEE0"></div>
-            <sup class="text-muted">SendMe! has helped raise $100,000 to send 40 students to 20 different destinations!</sup>
+            <sup class="text-muted">SendMe! has helped raise $@total.00 to send @ViewBag.TotalStudents.Count students to @ViewBag.Destination.Count different destinations!</sup>
+            
         </div>
 
     </div>
