Trying to get the map closer to center.

--- a/SendMe/Views/Home/About.cshtml
+++ b/SendMe/Views/Home/About.cshtml
@@ -25,11 +25,9 @@
 <div class="row">
     <div class="about-content">
         <div class="container">
-            <div id="mapAll" style="width: 83%; height: 300px; border: 3px solid #DADEE0"></div>
-            <sup class="text-muted">SendMe! has helped raise $@total.00 to send @ViewBag.TotalStudents.Count students to @ViewBag.Destination.Count different destinations!</sup>
-            
+            <div id="mapAll" style="width: 85%; height: 300px;  margin:inherit; border: 3px solid #DADEE0"></div>
+            <sup class="text-muted">SendMe! has helped raise $@total.00 to send @ViewBag.TotalStudents.Count students to @ViewBag.Destination.Count different destinations!</sup> 
         </div>
-
     </div>
 </div>
 
