--- a/SendMe/Views/Home/About.cshtml
+++ b/SendMe/Views/Home/About.cshtml
@@ -20,22 +20,61 @@
 @{double total = 0.0;}
 @foreach (var amount in ViewBag.TotalDonations)
 {
-    total +=amount.Amount;
+    total += amount.Amount;
 }
 <div class="row">
     <div class="about-content">
         <div class="container">
-            <div id="mapAll" style="width: 85%; height: 300px;  margin:inherit; border: 3px solid #DADEE0"></div>
-            <sup class="text-muted">SendMe! has helped raise $@total.00 to send @ViewBag.TotalStudents.Count students to @ViewBag.Destination.Count different destinations!</sup> 
+            <div id="mapAll" style="width: 85%; height: 300px;  border: 3px solid #DADEE0"></div>
+            <sup class="text-muted">SendMe! has helped raise $@total.00 to send @ViewBag.TotalStudents.Count students to @ViewBag.Destination.Count different destinations!</sup>
         </div>
     </div>
 </div>
 
-<!--Problem and Solution-->
+<!--About the Creators-->
 <div class="row about-content">
+    <h2>The Faces behind SendMe!</h2>
     <div class="col-sm-12 col-md-6">
-        <h2><strong>The Problem</strong></h2>
+        <img class="profile-pic" src="~/Img/mic-anderson.jpg" />
+        <h3>
+            <a href="www.github.com/manderson566" class="social-icon" target="_blank">
+                <i class="fa fa-github"></i>
+            </a>
+            <strong>Michael Anderson</strong>
+        </h3>
         <hr />
+        <p>
+            Michael is from ... and was working as a ... before deciding to
+            pursue back-end engineering at The Iron Yard in Greenville, SC.
+            His favorite part about programming is...
+        </p>
+    </div>
+    <div class="col-sm-12 col-md-6">
+        <img class="profile-pic" src="~/Img/kris-sindorf.jpg" />
+        <h3>
+            <a href="www.github.com/ksindorf000" class="social-icon" target="_blank">
+                <i class="fa fa-github"></i>
+            </a>
+            <strong>Kristin Sindorf</strong>
+        </h3>
+        <hr />
+        <p>
+            Kristin is from Greenville, SC and was working as an application administrator
+            before deciding to pursue back-end engineering at The Iron Yard.
+            Her favorite part about programming is that there is always more to learn!
+        </p>
+    </div>
+</div>
+
+<!--About the Project-->
+<div class="row about-content">
+    <h2>About the Project</h2>
+    <div class="col-sm-12 col-md-6">
+        <h3>
+            <strong>The Background</strong>
+        </h3>
+        <hr />
+        <h4><strong>The Problem</strong></h4>
         <p>
             Students need to be able to raise and track funds for their
             study abroad trips. Faculty and staff need to be able to track students'
@@ -44,18 +83,15 @@
             staff end up having to keep up with multiple applications depending on each
             student's tracking method of choice.
         </p>
-    </div>
-
-    <div class="col-sm-12 col-md-6">
-        <h2><strong>The Solution</strong></h2>
-        <hr />
+        <br/>
+        <h4><strong>The Solution</strong></h4>
         <p>
-            Send Me! is a secure, user-friendly application that will allow students to
-            create profiles to which donors can navigate in order to donate funds to the
-            student's trip. Students will have to verify their school email address and so 
-            will be affiliated with their school in the application. Each school will have 
-            a dedicated page where the progress of their students' fund-raising is displayed. 
-            This will make it easy for faculty and staff to keep up with all of their 
+            SendMe! is a secure, user-friendly application that allows students to
+            create profiles in order to receive funds from donors.
+            Students will have to verify their school email address and so
+            will be affiliated with their school in the application. Each school will have
+            a dedicated page where the progress of their students' fund-raising is displayed.
+            This will make it easy for faculty and staff to keep up with all of their
             students in one place.
         </p>
         <p>
@@ -65,4 +101,27 @@
         </p>
 
     </div>
+
+    <div class="col-sm-12 col-md-6">
+        <h3>
+            <strong>The Future</strong>
+        </h3>
+        <hr />
+        <p>
+            <h4><strong>Features to Add</strong></h4>
+            <ul>
+                <li>Search by School, Student or Trip</li>
+                <li>Administrators create Trips instead of students (for consistency)</li>
+                <li>Ability to Share to Social Media</li>
+            </ul>
+        </p>
+        <p>
+            <h4><strong>Big Dreams</strong></h4>
+            <ul>
+                <li>Mobile App</li>
+            </ul>
+        </p>
+    </div>
+
 </div>
+
