Added info about myslef on the About page.

--- a/SendMe/Views/Home/About.cshtml
+++ b/SendMe/Views/Home/About.cshtml
@@ -44,9 +44,9 @@
         </h3>
         <hr />
         <p>
-            Michael is from ... and was working as a ... before deciding to
+            Michael is from Rock Hill, SC and was working as a Construction Materials Inspector before deciding to
             pursue back-end engineering at The Iron Yard in Greenville, SC.
-            His favorite part about programming is...
+            His favorite part about programming is getting a chance to dive into understanding exactly how the different cogs work together in turning the wheel. 
         </p>
     </div>
     <div class="col-sm-12 col-md-6">
