--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -168,7 +168,7 @@
                                                                     </div>
 
                                                                     <!-------------MAP------------>
-                                                                        <div id="map" style="width: 500px; height: 400px; border: 3px solid #DADEE0;"></div><br />
+                                                                        <div id="map" style="height: 400px; border: 3px solid #DADEE0;"></div><br />
 
                                                                     <!-----------Progress bar------------->
                                                                     <div class="col-sm-10">
